Updated deployment to use docker and updated README

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,8 @@
+# OpenAI or GPT API
+OPENAI_API_KEY=your-openai-api-key
 
-# Rename this file to .env and insert your OpenAI API key
-OPENAI_API_KEY=your-openai-key-here
-
-# Twitter/X API credentials
-X_BEARER_TOKEN=your-twitter-bearer-token
+# Database
+DATABASE_URL=postgresql://tjuser:tjpass@db:5432/tjgreen
+POSTGRES_DB=tjgreen
+POSTGRES_USER=tjuser
+POSTGRES_PASSWORD=tjpass
