More build fixes

--- a/android_app/app/build.gradle
+++ b/android_app/app/build.gradle
@@ -6,6 +6,8 @@ plugins {
 android {
     compileSdk 33
 
+    namespace 'com.example.stockpredictor'
+    
     defaultConfig {
         applicationId "com.example.stockpredictor"
         minSdk 24
