Added missing files

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .env
 .history
 android_app/.gradle
-android_app/build
+android_app/app/build
 android_app/gradle/*
-android_app/
+android_app/build/reports
